--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -119,19 +119,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="bf684" class="javax.swing.JComboBox" binding="salaryMenu">
-        <constraints>
-          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="50" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <model>
-            <item value="p/h"/>
-            <item value="p/a"/>
-          </model>
-        </properties>
-      </component>
       <component id="2d71d" class="javax.swing.JLabel" binding="skillsLabel">
         <constraints>
           <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -374,6 +361,14 @@
           </component>
         </children>
       </scrollpane>
+      <component id="54d2f" class="javax.swing.JLabel" binding="salaryTextLabel">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="enter digits only please"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
