--- a/JobSeekingSystem/src/JobSeekerHomeGUI.form
+++ b/JobSeekingSystem/src/JobSeekerHomeGUI.form
@@ -247,7 +247,7 @@
                   </grid>
                 </constraints>
               </vspacer>
-              <component id="91e8b" class="javax.swing.JComboBox" binding="comboBox3" default-binding="true">
+              <component id="91e8b" class="javax.swing.JComboBox" binding="primaryCategoryBox">
                 <constraints>
                   <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <minimum-size width="-1" height="40"/>
