--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -3,9 +3,13 @@
   <grid id="27dc6" binding="createJobPanel" layout-manager="GridLayoutManager" row-count="25" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="100" bottom="20" right="100"/>
     <constraints>
-      <xy x="20" y="20" width="614" height="1211"/>
+      <xy x="20" y="20" width="850" height="1211"/>
     </constraints>
-    <properties/>
+    <properties>
+      <minimumSize width="850" height="931"/>
+      <opaque value="false"/>
+      <preferredSize width="850" height="947"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="5df12" class="javax.swing.JLabel" binding="formTitle">
