--- a/JobSeekingSystem/src/RecruiterHomeGUI.form
+++ b/JobSeekingSystem/src/RecruiterHomeGUI.form
@@ -2,13 +2,14 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="RecruiterHomeGUI">
   <tabbedpane id="5c5af" binding="recruiterNav">
     <constraints>
-      <xy x="20" y="20" width="1008" height="1214"/>
+      <xy x="20" y="20" width="1150" height="1214"/>
     </constraints>
     <properties>
       <background color="-16745473"/>
       <font size="16" style="1"/>
       <foreground color="-1"/>
-      <preferredSize width="800" height="950"/>
+      <minimumSize width="1150" height="800"/>
+      <preferredSize width="1050" height="1050"/>
     </properties>
     <border type="none"/>
     <children>
@@ -98,7 +99,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="c5ea9" binding="searchPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="c5ea9" binding="searchPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="100" bottom="100" right="100"/>
         <constraints>
           <tabbedpane title="Search Candidates"/>
