--- a/JobSeekingSystem/src/JobSeekerHomeGUI.form
+++ b/JobSeekingSystem/src/JobSeekerHomeGUI.form
@@ -2,7 +2,7 @@
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="JobSeekerHomeGUI">
   <tabbedpane id="e6adc" binding="navbar">
     <constraints>
-      <xy x="8" y="20" width="1372" height="1235"/>
+      <xy x="8" y="20" width="1372" height="1259"/>
     </constraints>
     <properties>
       <background color="-16745473"/>
@@ -353,6 +353,18 @@
                   </component>
                 </children>
               </scrollpane>
+              <component id="89aaa" class="javax.swing.JComboBox" binding="secondaryCategoryBox">
+                <constraints>
+                  <grid row="4" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="40"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <model>
+                    <item value="Category"/>
+                  </model>
+                </properties>
+              </component>
             </children>
           </grid>
         </children>
