--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -329,6 +329,14 @@
         </constraints>
         <properties/>
       </component>
+      <component id="cd1b4" class="javax.swing.JLabel" binding="salaryMessage">
+        <constraints>
+          <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="enter numbers only please"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
