--- a/JobSeekingSystem/src/ManageJobGUI.form
+++ b/JobSeekingSystem/src/ManageJobGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ManageJobGUI">
-  <grid id="27dc6" binding="manageJobPanel" layout-manager="GridLayoutManager" row-count="31" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="manageJobPanel" layout-manager="GridLayoutManager" row-count="27" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="20" left="100" bottom="20" right="100"/>
     <constraints>
       <xy x="20" y="20" width="654" height="1250"/>
@@ -76,16 +76,15 @@
       </component>
       <component id="357cf" class="javax.swing.JComboBox" binding="jobTypeMenu">
         <constraints>
-          <grid row="12" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="12" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <model>
             <item value="Casual"/>
-            <item value="Contract"/>
-            <item value="Part-Time"/>
-            <item value="Full-Time"/>
+            <item value="PartTime"/>
+            <item value="FullTime"/>
           </model>
           <toolTipText value=""/>
         </properties>
@@ -101,21 +100,12 @@
       </component>
       <component id="77bce" class="javax.swing.JTextField" binding="salaryText">
         <constraints>
-          <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
+          <grid row="14" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="30"/>
           </grid>
         </constraints>
-        <properties/>
-      </component>
-      <component id="c7635" class="javax.swing.JComboBox" binding="salaryMenu">
-        <constraints>
-          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
         <properties>
-          <model>
-            <item value="p/h"/>
-            <item value="p/a"/>
-          </model>
+          <text value=""/>
         </properties>
       </component>
       <component id="b174" class="javax.swing.JLabel" binding="skillsLabel">
@@ -134,14 +124,7 @@
           </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="insert"/>
-            <item value="list"/>
-            <item value="from"/>
-            <item value="skills"/>
-            <item value="text"/>
-            <item value="file"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="ad3b7" class="javax.swing.JButton" binding="addSkillButton">
@@ -154,19 +137,12 @@
       </component>
       <component id="fe431" class="javax.swing.JList" binding="skillsList">
         <constraints>
-          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="16" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="50"/>
           </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="connect skill"/>
-            <item value="using"/>
-            <item value="add skill button"/>
-            <item value="remove skill"/>
-            <item value="using"/>
-            <item value="remove skill button"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="332d8" class="javax.swing.JButton" binding="removeSkillButton">
@@ -175,48 +151,6 @@
         </constraints>
         <properties>
           <text value="Remove Skill"/>
-        </properties>
-      </component>
-      <component id="360f9" class="javax.swing.JLabel" binding="keywordsLabel">
-        <constraints>
-          <grid row="18" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font style="1"/>
-          <text value="Keywords"/>
-        </properties>
-      </component>
-      <component id="29a5f" class="javax.swing.JButton" binding="addKeywordsButton">
-        <constraints>
-          <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Add Keyword"/>
-        </properties>
-      </component>
-      <component id="c5700" class="javax.swing.JList" binding="keywordsList">
-        <constraints>
-          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <model>
-            <item value="keyword 1"/>
-            <item value="keyword 2"/>
-            <item value="keyword 3"/>
-            <item value="add keyword from text"/>
-            <item value="remove with"/>
-            <item value="remove button"/>
-          </model>
-        </properties>
-      </component>
-      <component id="93a84" class="javax.swing.JButton" binding="removeKeywordsButton">
-        <constraints>
-          <grid row="20" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Remove"/>
         </properties>
       </component>
       <component id="e9802" class="javax.swing.JLabel" binding="applicationsLabel">
@@ -230,7 +164,7 @@
       </component>
       <component id="e2d6e" class="javax.swing.JLabel" binding="locationLabel">
         <constraints>
-          <grid row="21" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="18" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font style="1"/>
@@ -239,12 +173,13 @@
       </component>
       <component id="78daf" class="javax.swing.JComboBox" binding="locationStateMenu">
         <constraints>
-          <grid row="22" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="19" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
         <properties>
           <model>
+            <item value=""/>
             <item value="WA"/>
             <item value="SA"/>
             <item value="VIC"/>
@@ -257,43 +192,25 @@
       </component>
       <component id="66fb4" class="javax.swing.JLabel" binding="postcodeLabel">
         <constraints>
-          <grid row="21" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font style="1"/>
           <text value="Postcode"/>
         </properties>
       </component>
-      <component id="83f32" class="javax.swing.JTextField" binding="postcodeText">
-        <constraints>
-          <grid row="22" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="/add validation"/>
-        </properties>
-      </component>
       <component id="9a0e9" class="javax.swing.JLabel" binding="descriptionLabel">
         <constraints>
-          <grid row="23" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="20" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font style="1"/>
           <text value="Job Description"/>
         </properties>
       </component>
-      <component id="ba6d3" class="javax.swing.JFormattedTextField" binding="descriptionText">
-        <constraints>
-          <grid row="24" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="100"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="83e39" class="javax.swing.JLabel" binding="categoryLabelPrimary">
         <constraints>
-          <grid row="25" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="22" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font style="1"/>
@@ -302,7 +219,7 @@
       </component>
       <component id="afea1" class="javax.swing.JLabel" binding="categoryLabelSecondary">
         <constraints>
-          <grid row="25" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="22" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font style="1"/>
@@ -311,63 +228,27 @@
       </component>
       <component id="5b390" class="javax.swing.JComboBox" binding="categoryMenuPrimary">
         <constraints>
-          <grid row="26" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="23" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="-1"/>
+          </grid>
         </constraints>
         <properties>
-          <model>
-            <item value="grab"/>
-            <item value="from"/>
-            <item value="categories"/>
-            <item value="text"/>
-            <item value="file"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="824bc" class="javax.swing.JComboBox" binding="categoryMenuSecondary">
         <constraints>
-          <grid row="26" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <model>
-            <item value="grab"/>
-            <item value="from"/>
-            <item value="categories"/>
-            <item value="text"/>
-            <item value="file"/>
-          </model>
-        </properties>
-      </component>
-      <component id="b0888" class="javax.swing.JLabel" binding="hoursLabel">
-        <constraints>
-          <grid row="27" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <font style="1"/>
-          <text value="Hours"/>
-        </properties>
-      </component>
-      <component id="32989" class="javax.swing.JTextField" binding="hoursText">
-        <constraints>
-          <grid row="28" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="100" height="-1"/>
+          <grid row="23" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
-      </component>
-      <component id="40dee" class="javax.swing.JComboBox" binding="hoursMenu">
-        <constraints>
-          <grid row="28" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
         <properties>
-          <model>
-            <item value="per week"/>
-            <item value="per fortnight"/>
-          </model>
+          <model/>
         </properties>
       </component>
       <component id="350ea" class="javax.swing.JLabel" binding="statusLabel">
         <constraints>
-          <grid row="29" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="24" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <font style="1"/>
@@ -376,19 +257,22 @@
       </component>
       <component id="a36ed" class="javax.swing.JComboBox" binding="statusMenu">
         <constraints>
-          <grid row="30" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="25" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <model>
             <item value="Draft"/>
-            <item value="Published"/>
+            <item value="Advertised"/>
             <item value="Archived"/>
+            <item value="Withdrawn"/>
           </model>
         </properties>
       </component>
       <component id="6dad" class="javax.swing.JLabel" binding="statusMessageLabel">
         <constraints>
-          <grid row="30" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="25" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="/error if &gt;0 apps (changing to draft)"/>
@@ -418,27 +302,51 @@
           <text value="/int: recID"/>
         </properties>
       </component>
-      <component id="f6ff9" class="javax.swing.JLabel" binding="empNameLabel">
+      <component id="f2d19" class="javax.swing.JTextField" binding="employerText">
         <constraints>
-          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="/String: empName"/>
-        </properties>
-      </component>
-      <component id="33955" class="javax.swing.JComboBox" binding="keywordsMenu">
-        <constraints>
-          <grid row="19" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false">
+          <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
+        <properties/>
+      </component>
+      <component id="fa720" class="javax.swing.JLabel" binding="salaryMessage">
+        <constraints>
+          <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
         <properties>
-          <model>
-            <item value="insert"/>
-            <item value="from"/>
-            <item value="keywords"/>
-            <item value="list"/>
-          </model>
+          <text value="enter numbers only please"/>
+        </properties>
+      </component>
+      <component id="5cd92" class="javax.swing.JComboBox" binding="postcodeMenu">
+        <constraints>
+          <grid row="19" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
+      </component>
+      <scrollpane id="7782a" binding="descriptionScroll">
+        <constraints>
+          <grid row="21" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="1" anchor="1" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="400" height="100"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="ba3d4" class="javax.swing.JTextArea" binding="descriptionText">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="d4487" class="javax.swing.JButton" binding="submitButton">
+        <constraints>
+          <grid row="26" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Submit"/>
         </properties>
       </component>
     </children>
